--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,33 @@
-spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
+# ===============================
+# DATABASE CONFIG
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/cold_chain_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# JWT CONFIG
+# ===============================
+jwt.secret=ColdChainSecretKey123456789
+jwt.expiration=86400000
+
+# ===============================
+# SWAGGER
+# ===============================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
