--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coldchain_db?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.application.name=demo
+# Don't change the port
+server.port = 9001
+# for https
+server.forward-headers-strategy=framework 
 
+spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# JWT secret and expiration
-jwt.secret=YourSecretKey123456
-jwt.expirationMs=3600000
-
-# Swagger
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
