--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.main.allow-circular-references=true
